alignment-fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@ h2{
   font-size: 2.8rem;
   font-family: 'lora',serif;
   color: #020202ff;
+  text-align: left;
 
 }
 h4{
@@ -52,6 +53,7 @@ h3{
   font-family: 'lora',serif;
   color: #383738;
   font-weight: 600;
+  text-align: left;
 }
 .sponsor-button{
   text-align: center;
